# reverse-string-jni

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/com/example/: Main.kt  ReverseLib.kt
kotlin/src/test/kotlin/com/example/: ReverseLibTest.kt
native/: CMakeLists.txt
native/src/: reverse_lib.cpp  reverse_lib.h
